# arduino-projects

ja/: Cargo.toml  README.md
ja-2026/: Cargo.toml  README.md  Ravedude.toml
ja-2026/.cargo/: config.toml
ja-2026/src/: board.rs  engine.rs  lib.rs  main.rs  scene.rs  wrapper.rs
ja-2026/src/scenes/: idle.rs  manager.rs  mod.rs  rotate.rs  selector.rs  types.rs
