[package]
name = "ja-2026"
version = "0.1.0"
authors = ["Dik van Genuchten <dik@vangenuchten.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ja-2026"
test = false
bench = false

[lib]
test = false
bench = false

[target.'cfg(target_arch = "avr")'.dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = "0.8.1"

[target.'cfg(target_arch = "avr")'.dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["sparkfun-promini-5v"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
